[package]
name = "http_headers_print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcgen = "0.13.1"
rustls = "0.23.4"
rustls-pemfile = "2.1.2"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "tracing", "chrono"] }
